Change icon of application

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
-            <span class="bage head">A1.0</span>
+            <core-image class="bage head" style="width:300px;height:300px;" sizing="contain"
+                        src="auction-logo.png"></core-image>
+            <!--<span class="bage head">A1.0</span>-->
 
             <p class="lead head">Auction 1.0 is a better way to create and host your trades on one of the most popular
                 platform</p>
