--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -1,6 +1,7 @@
 <core-scaffold mode="waterfall">
     <core-header-panel navigation flex>
         <core-toolbar>
+            <core-icon src="auction-logo-small.png"></core-icon>
             <span data-bind="text: appTitle"></span>
         </core-toolbar>
         <core-menu data-bind="foreach: router.navigationModel, attr: {selected: router.selectedTab}">
