Rename expired to Closed on auction lists

--- a/app/views/content.html
+++ b/app/views/content.html
@@ -6,7 +6,7 @@
                 <h3>
                     <span data-bind="text: title"></span>
                     <!-- ko if: status == 'expired' -->
-                    <small>Expired</small>
+                    <small>Closed</small>
                     <!-- /ko -->
                 </h3>
                 <p data-bind="text: description"></p>
